--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
     "bulma": "^1.0.1",
+    "firebase": "^10.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.1",
     "yup": "^1.4.0"
   },
