--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-.env                # loaded in all cases
+.env                
 node_modules
 dist
 dist-ssr
